SERVER-66910 Ensure `collectionUUID` is respected for `collMod` unique index conversion